<resources>
    <string name="app_name">Final Exam</string>
    <string name="profile_picture">Profile picture</string>
    <string name="username">Username</string>
    <string name="email">user@email.com</string>
    <string name="edit_profile">Chỉnh sửa hồ sơ</string>
    <string name="my_favorites">Mục yêu thích của tôi</string>
    <string name="no_favorites">Chưa có mục yêu thích nào</string>
    <string name="favorite_item_image">Ảnh yêu thích</string>
    <string name="search">Tìm kiếm</string>
    <string name="favorites">Mục yêu thích</string>
    <string name="contact">Liên hệ</string>
    <string name="appointment">Lịch hẹn</string>
    <string name="profile">Hồ sơ</string>
    <string name="login_title">Đăng Nhập</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Mật khẩu</string>
    <string name="remember_me_text">Nhớ mật khẩu</string>
    <string name="forgot_password_text">Quên mật khẩu?</string>
    <string name="login_button_text">Đăng nhập</string>
    <string name="settings">Cài đặt</string>
    <string name="room_management">Quản lý phòng trọ</string>
    <string name="create_post">Đăng bài</string>
    <string name="see_details">Xem chi tiết</string>
    <string name="room_title">Tiêu đề phòng</string>
    <string name="price">Giá</string>
    <string name="address">Địa chỉ</string>
    <string name="delete">Xoá</string>
    <string name="add_contract">Thêm hợp đồng</string>
    <string name="contract_management">Quản lý hợp đồng</string>
    <string name="delete_contract">Xoá hợp đồng</string>
    <string name="status_messages">Thông báo trạng thái sẽ xuất hiện ở đây.</string>
    <string name="tenant_name">Tên người thuê nhà</string>
    <string name="rent_amount">Số tiền thuê</string>
    <string name="contract_status">Trạng thái hợp đồng</string>
    <string name="contract_title">Tiêu đề hợp đồng</string>
    <string name="check_all">Đánh dấu tất cả/Bỏ đánh dấu tất cả</string>
    <string name="delete_selected">Xoá chỉ mục được chọn</string>
    <string name="delete_all">Xóa tất cả</string>
    <string name="request_management">Quản lý yêu cầu</string>
    <string name="create_contract">Tạo hợp đồng</string>
    <string name="reject">Từ chối</string>
    <string name="deposit_amount">Số tiền gửi</string>
    <string name="end_day">Ngày kết thúc</string>
    <string name="start_day">Ngày bắt đầu</string>
    <string name="contract_terms">Điều khoản hợp đồng</string>
    <string name="room_description">Mô tả phòng trọ</string>
    <string name="minimum_deposit_amount">Số tiền cọc tối thiểu</string>
    <string name="enter_deposit_amount">Nhập số tiền cọc (VND)</string>
    <string name="rent">Giá thuê</string>
    <string name="area">Diện tích (m²)</string>
    <string name="select_image">Chọn hình ảnh</string>
    <string name="post">Đăng bài</string>
    <string name="default_notification_channel_id">Thông báo</string>
    <string name="accept">Chấp nhận</string>
    <string name="deny">Từ chối</string>
    <string name="user_management">Quản lý người dùng</string>
    <string name="support">Hỗ trợ</string>
    <string name="logout">Đăng xuất</string>
</resources>