<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search" />

    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_menu_favorites"
        android:title="@string/favorites" />

    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/outline_message_24"
        android:title="@string/contact" />

    <item
        android:id="@+id/nav_appointment"
        android:icon="@drawable/baseline_edit_calendar_24_black"
        android:title="@string/appointment" />

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/settings" />
</menu>