<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_room_management"
        android:icon="@drawable/ic_menu_room_management"
        android:title="@string/room_management"/>

    <item
        android:id="@+id/nav_contract_management"
        android:icon="@drawable/ic_menu_contract_management"
        android:title="@string/contract_management"/>

    <item
        android:id="@+id/nav_request_management"
        android:icon="@drawable/ic_menu_request_management"
        android:title="@string/request_management"/>

    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/outline_message_24"
        android:title="@string/contact" />


    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/settings" />
</menu>