<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/roomImageManagement"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/placeholder_img"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/roomTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/depositAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deposit_amount"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Trạng thái" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/createContractButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:backgroundTint="#4CAF50"
                android:text="@string/create_contract" />

            <Button
                android:id="@+id/rejectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:backgroundTint="#E91E63"
                android:text="@string/reject" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
