<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/contractTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="clip_vertical"
                android:text="@string/contract_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/menuIcon"
                android:layout_width="42dp"
                android:layout_height="24dp"
                android:contentDescription="More options"
                android:src="@drawable/ic_more_vert" />
        </LinearLayout>

        <TextView
            android:id="@+id/tenantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/tenant_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/rentAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/rent_amount"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/contractStatus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/contract_status"
                android:textSize="14sp"
                android:textColor="@android:color/holo_green_dark" />

            <CheckBox
                android:id="@+id/item_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
