<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/roomImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/placeholder_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/roomTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="clip_vertical"
                android:text="@string/room_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/detailButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/xem_chi_ti_t"
                android:textSize="14sp"
                app:iconSize="9dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/roomPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="clip_vertical"
            android:text="@string/price"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/roomAddress"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/address"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/heartIcon"
                android:layout_width="42dp"
                android:layout_height="26dp"
                android:src="@drawable/ic_heart_empty" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
